--- a/SGGValheimMods/SGGValheimMods.csproj
+++ b/SGGValheimMods/SGGValheimMods.csproj
@@ -34,6 +34,9 @@
     <Reference Include="0Harmony">
       <HintPath>Libs\0Harmony.dll</HintPath>
     </Reference>
+    <Reference Include="assembly_steamworks">
+      <HintPath>Libs\assembly_steamworks.dll</HintPath>
+    </Reference>
     <Reference Include="assembly_valheim">
       <HintPath>Libs\assembly_valheim.dll</HintPath>
     </Reference>
